se terminaron las clases y las interfaces y se arreglaron los errores